# TransferX

./: .env.example  .gitignore  Makefile  Procfile  README.md  docker-compose.yml  new 10.txt  package-lock.json  package.json  pyproject.toml  railway.toml  tailwind.config.js
docker/web/: Dockerfile  entrypoint.sh
docs/: ADMIN_GUIDE.md  DEV_SETUP.md  USER_GUIDE.md
scripts/: wait_for_db.py
src/: manage.py
src/apps/accounts/: admin.py  decorators.py  finance.py  models.py  signals.py  urls.py  utils.py  views.py
src/apps/auctions/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
src/apps/deals/: admin.py  models.py  urls.py  views.py
src/apps/marketplace/: __init__.py  admin.py  context_processors.py  discovery_urls.py  forms.py  models.py  query.py  services.py  urls.py  views.py
src/apps/notifications/: admin.py  models.py  urls.py  utils.py  views.py
src/apps/players/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
src/apps/scouting/: __init__.py  admin.py  forms.py  models.py  services.py  urls.py  views.py
src/apps/stats/: admin.py  form.py  models.py
src/config/: asgi.py  env.py  urls.py  wsgi.py
src/templates/: base.html  home.html
src/transferx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auction_deal.py  test_auctions.py  test_finance.py  test_form.py  test_m7_discovery.py  test_m8_scouting.py  test_marketplace_m5.py  test_milestone4.py  test_offers_m6.py  test_smoke.py  test_stats_sync.py  test_world_profiles.py  test_world_sync.py
(+150 files in other folders)
